--- a/Andgasm.BookieBreaker.FixtureSvc/Andgasm.BookieBreaker.Fixture.API/appsettings.Development.json
+++ b/Andgasm.BookieBreaker.FixtureSvc/Andgasm.BookieBreaker.Fixture.API/appsettings.Development.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=FixtureSvc;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ServiceBus": {
+    "ServiceBusHost": "Azure",
+    "ServiceBusConnectionString": "<AddSecretForKey>",
+    "NewFixtureTopicName": "newfixtureevent",
+    "NewFixtureSubscriptionName": "FixtureSvc"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
