--- a/Andgasm.BookieBreaker.FixtureSvc/Andgasm.BookieBreaker.Fixture.API/appsettings.json
+++ b/Andgasm.BookieBreaker.FixtureSvc/Andgasm.BookieBreaker.Fixture.API/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=FixtureSvc;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ServiceBus": {
+    "ServiceBusHost": "Azure",
+    "ServiceBusConnectionString": "<AddSecretForKey>",
+    "NewFixtureTopicName": "newfixtureevent",
+    "NewFixtureSubscriptionName": "FixtureSvc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
