--- a/Andgasm.BookieBreaker.FixtureSvc/Andgasm.BookieBreaker.Fixture.Extractor.Svc/Andgasm.BookieBreaker.Fixture.Extractor.Svc.csproj
+++ b/Andgasm.BookieBreaker.FixtureSvc/Andgasm.BookieBreaker.Fixture.Extractor.Svc/Andgasm.BookieBreaker.Fixture.Extractor.Svc.csproj
@@ -1,8 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>
+      f1b1aa17-c060-4c2d-8db4-30aa3d8ecaf0
+    </UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Andgasm.BookieBreaker.Fixture.Core\Andgasm.BookieBreaker.Fixture.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
