shredding season into season period msgs

--- a/Andgasm.BookieBreaker.FixtureSvc/Andgasm.BookieBreaker.Fixture.Extractor.Svc/appsettings.json
+++ b/Andgasm.BookieBreaker.FixtureSvc/Andgasm.BookieBreaker.Fixture.Extractor.Svc/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "MaxRequestsPerSecond":  "40",
+  "MaxRequestsPerSecond":  "30",
   "API": {
     "FixturesDbApiRootKey": "https://localhost:44358",
     "FixtureClubAppearancesApiPath": "fixtureclubappearanceassociations"
@@ -8,7 +8,9 @@
     "ServiceBusHost": "Azure",
     "ServiceBusConnectionString": "<AddSecretForKey>",
     "NewSeasonTopicName": "newseasonevent",
-    "NewSeasonSubscriptionName": "FixtureSvc"
+    "NewSeasonSubscriptionName": "FixtureSvc",
+    "NewSeasonPeriodTopicName": "newseasonperiodevent",
+    "NewSeasonPeriodSubscriptionName": "FixtureSvc"
   },
   "Logging": {
     "LogLevel": {
