--- a/Andgasm.BB.Fixture/Andgasm.BB.Fixture.API/appsettings.json
+++ b/Andgasm.BB.Fixture/Andgasm.BB.Fixture.API/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=FixtureSvc;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": ""
   },
   "ServiceBus": {
     "ServiceBusHost": "Azure",
-    "ServiceBusConnectionString": "<AddSecretForKey>",
+    "ServiceBusConnectionString": "Endpoint=sb://bookiebreakerbus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=lQtFG6BeFtto2P90WyCjq+R3S5UmgliXwpEbTwA20zg=",
     "NewFixtureTopicName": "newfixtureevent",
     "NewFixtureSubscriptionName": "FixtureSvc"
   },
