--- a/Andgasm.BB.Fixture/Andgasm.BB.Fixture.Svc/appsettings.json
+++ b/Andgasm.BB.Fixture/Andgasm.BB.Fixture.Svc/appsettings.json
@@ -1,12 +1,12 @@
 {
   "MaxRequestsPerSecond":  "30",
   "API": {
-    "FixturesDbApiRootKey": "https://localhost:44358",
+    "FixturesDbApiRootKey": "https://fixturesvcapi.azurewebsites.net",
     "FixtureClubAppearancesApiPath": "fixtureclubappearanceassociations"
   },
   "ServiceBus": {
     "ServiceBusHost": "Azure",
-    "ServiceBusConnectionString": "<AddSecretForKey>",
+    "ServiceBusConnectionString": "Endpoint=sb://bookiebreakerbus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=lQtFG6BeFtto2P90WyCjq+R3S5UmgliXwpEbTwA20zg=",
     "NewSeasonTopicName": "newseasonevent",
     "NewSeasonSubscriptionName": "FixtureSvc",
     "NewSeasonPeriodTopicName": "newseasonperiodevent",
