--- a/Andgasm.BB.Fixture/Andgasm.BB.Fixture.Svc/Andgasm.BB.Fixture.Svc.csproj
+++ b/Andgasm.BB.Fixture/Andgasm.BB.Fixture.Svc/Andgasm.BB.Fixture.Svc.csproj
@@ -18,6 +18,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Run.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Settings.job">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
