renamed res/models/dtos to be consistent with code vs key - streamlined and refactored - wip!

--- a/Andgasm.BB.Fixture/Andgasm.BB.Fixture.Players.Svc/Andgasm.BB.Fixture.Players.Svc.csproj
+++ b/Andgasm.BB.Fixture/Andgasm.BB.Fixture.Players.Svc/Andgasm.BB.Fixture.Players.Svc.csproj
@@ -15,4 +15,16 @@
     <ProjectReference Include="..\Andgasm.BB.Fixture.Core\Andgasm.BB.Fixture.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Run.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Settings.job">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
