--- a/Andgasm.BB.Fixture/Andgasm.BB.Fixture.Players.Svc/appsettings.json
+++ b/Andgasm.BB.Fixture/Andgasm.BB.Fixture.Players.Svc/appsettings.json
@@ -2,15 +2,13 @@
   "MaxRequestsPerSecond": "30",
   "API": {
     "FixturesDbApiRootKey": "https://fixturesvcapi.azurewebsites.net",
-    "FixtureClubAppearancesApiPath": "fixtureclubappearanceassociations"
+    "FixturePlayerAppearancesApiPath": "fixtureplayerappearanceassociations"
   },
   "ServiceBus": {
     "ServiceBusHost": "Azure",
     "ServiceBusConnectionString": "Endpoint=sb://bookiebreakerbus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=lQtFG6BeFtto2P90WyCjq+R3S5UmgliXwpEbTwA20zg=",
-    "NewSeasonTopicName": "newseasonevent",
-    "NewSeasonSubscriptionName": "FixtureSvc",
-    "NewSeasonPeriodTopicName": "newseasonperiodevent",
-    "NewSeasonPeriodSubscriptionName": "FixtureSvc"
+    "NewFixtureTopicName": "newfixtureevent",
+    "NewFixtureSubscriptionName": "PlayerAppearanceSvc"
   },
   "Logging": {
     "LogLevel": {
